--- a/css/main.css
+++ b/css/main.css
@@ -32,11 +32,12 @@ header {
 }
 
 h2 {
-  margin: 2rem 2rem 0;
+  margin: 4rem 2rem 2rem;
 }
 
 div.white-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   background-color: white;
   justify-content: space-between;
   padding: 2rem;
@@ -46,6 +47,8 @@ div.white-container {
 
 div.fpo-content {
   z-index: 1000;
+  grid-column: 1/6;
+  grid-row: 1/2;
 }
 
 .fpo-content > img {
@@ -54,11 +57,13 @@ div.fpo-content {
 }
 
 .bkg-logo {
-  width: 50%;
+  width: 120%;
   max-width: 521px;
   animation: rotate 1s linear;
   order: 1;
   z-index: 0;
+  grid-column: 5/7;
+  grid-row: 1/2;
 }
 
 footer {
@@ -71,17 +76,26 @@ footer {
 /* START SCROLLING SVG CODE */
 
 @keyframes rotate {
-  from {transform:rotate(-45deg);}
+  from {
+    transform:rotate(-45deg);
+    opacity: 20%;
+  }
     to {transform:rotate(0deg);}
 }
 
 @-webkit-keyframes rotate {
-  from {transform:rotate(-45deg);}
+  from {
+    transform:rotate(-45deg);
+    opacity: 20%;
+  }
     to {transform:rotate(0deg);}
 }
 
 @-moz-keyframes rotate {
-  from {transform:rotate(-45deg);}
+  from {
+    transform:rotate(-45deg);
+    opacity: 20%;
+  }
     to {transform:rotate(0deg);}
 }
 
